# annqc

./: .gitignore  AnnQC_Project_Spec.md  README.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml
annqc/: __init__.py  cli.py  config.py  decisions.py  doublets.py  filter.py  methods_text.py  pipeline.py  qc.py  sensitivity.py  spec.py  thresholds.py  utils.py
annqc/report/: builder.py  plots.py
annqc/report/templates/: comparison.html  report.html  sensitivity.html
examples/: qc_config.yaml
paper/: paper.md
tests/: conftest.py  test_config.py  test_decisions.py  test_doublets.py  test_dry_run.py  test_filter.py  test_methods_text.py  test_pipeline.py  test_qc.py  test_sensitivity.py  test_thresholds.py  test_warnings.py
tests/snapshots/: pbmc3k_summary.json
